--- a/App.config
+++ b/App.config
@@ -1,32 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="PlenBotLogUploader.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="PlenBotLogUploader.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="PlenBotLogUploader.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="PlenBotLogUploader.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
         <PlenBotLogUploader.Properties.Settings>
             <setting name="LogsLocation" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="TwitchChannelName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="DPSReportServer" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="CustomTwitchName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="CustomTwitchOAuthPassword" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="FirstTimeMinimise" serializeAs="String">
                 <value>True</value>
@@ -47,7 +47,7 @@
                 <value>False</value>
             </setting>
             <setting name="GW2Location" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="ConnectToTwitch" serializeAs="String">
                 <value>False</value>
@@ -80,7 +80,7 @@
                 <value>True</value>
             </setting>
             <setting name="SessionMessage" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SessionSort" serializeAs="String">
                 <value>0</value>
@@ -110,7 +110,7 @@
                 <value>!song</value>
             </setting>
             <setting name="GW2APIKey" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="TwitchCommandGW2IgnEnabled" serializeAs="String">
                 <value>False</value>
@@ -128,19 +128,19 @@
                 <value>False</value>
             </setting>
             <setting name="DPSReportUsertoken" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="AleevaRefreshToken" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="AleevaRefreshTokenExpire" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="AleevaSelectedServer" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="AleevaSelectedChannel" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="AleevaSendNotification" serializeAs="String">
                 <value>False</value>
@@ -160,8 +160,8 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
