--- a/App.config
+++ b/App.config
@@ -28,7 +28,7 @@
             <setting name="CustomTwitchOAuthPassword" serializeAs="String">
                 <value/>
             </setting>
-            <setting name="FirstTimeMinimise" serializeAs="String">
+            <setting name="FirstTimeMinimize" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="UploadLogs" serializeAs="String">
@@ -55,7 +55,7 @@
             <setting name="FirstRun" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="TrayMinimise" serializeAs="String">
+            <setting name="TrayMinimize" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="TwitchCommandUploaderEnabled" serializeAs="String">
